@@ -28,7 +28,10 @@
  * Contains code macros for the processor floating-point operate instructions.
  * Based on ARM chapter 4.10.
  *
- * $Id: cpu_fp_operate.h,v 1.17 2008/02/05 15:51:34 iamcamiel Exp $
+ * $Id: cpu_fp_operate.h,v 1.18 2008/02/06 10:59:52 iamcamiel Exp $
+ *
+ * X-1.18       Camiel Vanderhoeven                             06-FEB-2008
+ *      Check for FPEN in old floating point code. 
  *
  * X-1.17       Camiel Vanderhoeven                             05-FEB-2008
  *      Only use new floating-point code when HAVE_NEW_FP has been defined.
@@ -184,7 +187,7 @@
 
 /* comparison */
 #define DO_CMPGEQ                                                   \
-  FPSTART; \
+  FPSTART;                                                          \
   state.f[FREG_3] = (vax_fcmp (state.f[FREG_1], state.f[FREG_2], ins) == 0) ? FP_TRUE : 0;
 
 #define DO_CMPGLE                                                   \
@@ -351,88 +354,200 @@
 
 #else
 
-#define DO_CPYS  state.f[FREG_3] = (state.f[FREG_1] & X64(8000000000000000))		\
+#define DO_CPYS                                                     \
+  FPSTART;                                                          \
+  state.f[FREG_3] = (state.f[FREG_1] & X64(8000000000000000))		\
 		  	   | (state.f[FREG_2] & X64(7fffffffffffffff));
 
-#define DO_CPYSN state.f[FREG_3] = (state.f[FREG_1] & X64(8000000000000000) ^ X64(8000000000000000)) 	\
+#define DO_CPYSN                                                    \
+  FPSTART;                                                          \
+  state.f[FREG_3] = (state.f[FREG_1] & X64(8000000000000000) ^ X64(8000000000000000)) 	\
 			   | (state.f[FREG_2] & X64(7fffffffffffffff));
 
-#define DO_CPYSE state.f[FREG_3] = (state.f[FREG_1] & X64(fff0000000000000))		\
+#define DO_CPYSE                                                    \
+  FPSTART;                                                          \
+  state.f[FREG_3] = (state.f[FREG_1] & X64(fff0000000000000))		\
 		  	   | (state.f[FREG_2] & X64(000fffffffffffff));
 
-#define DO_CVTQL state.f[FREG_3] = ((state.f[FREG_2] & X64(00000000c0000000)) << 32)	\
+#define DO_CVTQL                                                    \
+  FPSTART;                                                          \
+  state.f[FREG_3] = ((state.f[FREG_2] & X64(00000000c0000000)) << 32)	\
 	                   | ((state.f[FREG_2] & X64(000000003fffffff)) << 29);
 
-#define DO_CVTLQ state.f[FREG_3] = sext_u64_32(  ((state.f[FREG_2] >> 32) & X64(00000000c0000000))	\
+#define DO_CVTLQ                                                   \
+  FPSTART;                                                          \
+  state.f[FREG_3] = sext_u64_32(  ((state.f[FREG_2] >> 32) & X64(00000000c0000000))	\
 	                          | ((state.f[FREG_2] >> 29) & X64(000000003fffffff)));
 
-#define DO_FCMOVEQ  if (state.f[FREG_1] == X64(0000000000000000) || state.f[FREG_1] == X64(8000000000000000))	state.f[FREG_3] = state.f[FREG_2];
-#define DO_FCMOVGE  if (!(state.f[FREG_1]& X64(8000000000000000)) || state.f[FREG_1] == X64(8000000000000000))	state.f[FREG_3] = state.f[FREG_2];
-#define DO_FCMOVGT  if (!(state.f[FREG_1]& X64(8000000000000000)) && state.f[FREG_1] != X64(0000000000000000))	state.f[FREG_3] = state.f[FREG_2];
-#define DO_FCMOVLE  if ((state.f[FREG_1]& X64(8000000000000000)) || state.f[FREG_1] == X64(0000000000000000))	state.f[FREG_3] = state.f[FREG_2];
-#define DO_FCMOVLT  if ((state.f[FREG_1]& X64(8000000000000000)) && state.f[FREG_1] != X64(8000000000000000))	state.f[FREG_3] = state.f[FREG_2];
-#define DO_FCMOVNE  if (state.f[FREG_1] != X64(0000000000000000) && state.f[FREG_1] != X64(8000000000000000))	state.f[FREG_3] = state.f[FREG_2];
+#define DO_FCMOVEQ                                                   \
+  FPSTART;                                                          \
+    if (state.f[FREG_1] == X64(0000000000000000) || state.f[FREG_1] == X64(8000000000000000))	state.f[FREG_3] = state.f[FREG_2];
+#define DO_FCMOVGE                                                   \
+  FPSTART;                                                          \
+    if (!(state.f[FREG_1]& X64(8000000000000000)) || state.f[FREG_1] == X64(8000000000000000))	state.f[FREG_3] = state.f[FREG_2];
+#define DO_FCMOVGT                                                   \
+  FPSTART;                                                          \
+    if (!(state.f[FREG_1]& X64(8000000000000000)) && state.f[FREG_1] != X64(0000000000000000))	state.f[FREG_3] = state.f[FREG_2];
+#define DO_FCMOVLE                                                   \
+  FPSTART;                                                          \
+    if ((state.f[FREG_1]& X64(8000000000000000)) || state.f[FREG_1] == X64(0000000000000000))	state.f[FREG_3] = state.f[FREG_2];
+#define DO_FCMOVLT                                                   \
+  FPSTART;                                                          \
+    if ((state.f[FREG_1]& X64(8000000000000000)) && state.f[FREG_1] != X64(8000000000000000))	state.f[FREG_3] = state.f[FREG_2];
+#define DO_FCMOVNE                                                   \
+  FPSTART;                                                          \
+    if (state.f[FREG_1] != X64(0000000000000000) && state.f[FREG_1] != X64(8000000000000000))	state.f[FREG_3] = state.f[FREG_2];
 
-#define DO_MF_FPCR state.f[FREG_1] = state.fpcr;
-#define DO_MT_FPCR state.fpcr = state.f[FREG_1];
+#define DO_MF_FPCR                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_1] = state.fpcr;
+#define DO_MT_FPCR                                                   \
+  FPSTART;                                                          \
+   state.fpcr = state.f[FREG_1];
 
-#define DO_ADDG state.f[FREG_3] = host2g(g2host(state.f[FREG_1])+g2host(state.f[FREG_2]));
-#define DO_ADDF state.f[FREG_3] = host2f(f2host(state.f[FREG_1])+f2host(state.f[FREG_2]));
-#define DO_ADDT state.f[FREG_3] = host2t(t2host(state.f[FREG_1])+t2host(state.f[FREG_2]));
-#define DO_ADDS state.f[FREG_3] = host2s(s2host(state.f[FREG_1])+s2host(state.f[FREG_2]));
+#define DO_ADDG                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2g(g2host(state.f[FREG_1])+g2host(state.f[FREG_2]));
+#define DO_ADDF                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2f(f2host(state.f[FREG_1])+f2host(state.f[FREG_2]));
+#define DO_ADDT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2t(t2host(state.f[FREG_1])+t2host(state.f[FREG_2]));
+#define DO_ADDS                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2s(s2host(state.f[FREG_1])+s2host(state.f[FREG_2]));
 
-#define DO_SUBG state.f[FREG_3] = host2g(g2host(state.f[FREG_1])-g2host(state.f[FREG_2]));
-#define DO_SUBF state.f[FREG_3] = host2f(f2host(state.f[FREG_1])-f2host(state.f[FREG_2]));
-#define DO_SUBT state.f[FREG_3] = host2t(t2host(state.f[FREG_1])-t2host(state.f[FREG_2]));
-#define DO_SUBS state.f[FREG_3] = host2s(s2host(state.f[FREG_1])-s2host(state.f[FREG_2]));
+#define DO_SUBG                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2g(g2host(state.f[FREG_1])-g2host(state.f[FREG_2]));
+#define DO_SUBF                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2f(f2host(state.f[FREG_1])-f2host(state.f[FREG_2]));
+#define DO_SUBT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2t(t2host(state.f[FREG_1])-t2host(state.f[FREG_2]));
+#define DO_SUBS                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2s(s2host(state.f[FREG_1])-s2host(state.f[FREG_2]));
 
-#define DO_CMPGEQ state.f[FREG_3] = (g2host(state.f[FREG_1])==g2host(state.f[FREG_2]))?X64(4000000000000000):0;
-#define DO_CMPGLE state.f[FREG_3] = (g2host(state.f[FREG_1])<=g2host(state.f[FREG_2]))?X64(4000000000000000):0;
-#define DO_CMPGLT state.f[FREG_3] = (g2host(state.f[FREG_1])<g2host(state.f[FREG_2]))?X64(4000000000000000):0;
+#define DO_CMPGEQ                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (g2host(state.f[FREG_1])==g2host(state.f[FREG_2]))?X64(4000000000000000):0;
+#define DO_CMPGLE                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (g2host(state.f[FREG_1])<=g2host(state.f[FREG_2]))?X64(4000000000000000):0;
+#define DO_CMPGLT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (g2host(state.f[FREG_1])<g2host(state.f[FREG_2]))?X64(4000000000000000):0;
 
-#define DO_CMPTEQ state.f[FREG_3] = (t2host(state.f[FREG_1])==t2host(state.f[FREG_2]))?X64(4000000000000000):0;
-#define DO_CMPTLE state.f[FREG_3] = (t2host(state.f[FREG_1])<=t2host(state.f[FREG_2]))?X64(4000000000000000):0;
-#define DO_CMPTLT state.f[FREG_3] = (t2host(state.f[FREG_1])<t2host(state.f[FREG_2]))?X64(4000000000000000):0;
-#define DO_CMPTUN state.f[FREG_3] = (i_isnan(state.f[FREG_1]) || i_isnan(state.f[FREG_2]))?X64(4000000000000000):0;
+#define DO_CMPTEQ                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (t2host(state.f[FREG_1])==t2host(state.f[FREG_2]))?X64(4000000000000000):0;
+#define DO_CMPTLE                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (t2host(state.f[FREG_1])<=t2host(state.f[FREG_2]))?X64(4000000000000000):0;
+#define DO_CMPTLT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (t2host(state.f[FREG_1])<t2host(state.f[FREG_2]))?X64(4000000000000000):0;
+#define DO_CMPTUN                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (i_isnan(state.f[FREG_1]) || i_isnan(state.f[FREG_2]))?X64(4000000000000000):0;
 
-#define DO_CVTGQ state.f[FREG_3] = (u64)((s64)g2host(state.f[FREG_2]));
-#define DO_CVTQG state.f[FREG_3] = host2g((double)((s64)state.f[FREG_2]));
-#define DO_CVTQF state.f[FREG_3] = host2f((double)((s64)state.f[FREG_2]));
+#define DO_CVTGQ                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (u64)((s64)g2host(state.f[FREG_2]));
+#define DO_CVTQG                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2g((double)((s64)state.f[FREG_2]));
+#define DO_CVTQF                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2f((double)((s64)state.f[FREG_2]));
 
-#define DO_CVTTQ state.f[FREG_3] = (u64)((s64)t2host(state.f[FREG_2]));
-#define DO_CVTQT state.f[FREG_3] = host2t((double)((s64)state.f[FREG_2]));
-#define DO_CVTQS state.f[FREG_3] = host2s((double)((s64)state.f[FREG_2]));
-#define DO_CVTGD state.f[FREG_3] = host2d(g2host(state.f[FREG_2]));
-#define DO_CVTDG state.f[FREG_3] = host2g(d2host(state.f[FREG_2]));
-#define DO_CVTGF state.f[FREG_3] = host2f(g2host(state.f[FREG_2]));
+#define DO_CVTTQ                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = (u64)((s64)t2host(state.f[FREG_2]));
+#define DO_CVTQT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2t((double)((s64)state.f[FREG_2]));
+#define DO_CVTQS                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2s((double)((s64)state.f[FREG_2]));
+#define DO_CVTGD                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2d(g2host(state.f[FREG_2]));
+#define DO_CVTDG                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2g(d2host(state.f[FREG_2]));
+#define DO_CVTGF                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2f(g2host(state.f[FREG_2]));
 
-#define DO_FTOIS								\
+#define DO_FTOIS                                                   \
+  FPSTART;                                                          \
+  								\
  	    temp_64 = state.f[FREG_1];						\
 	    state.r[REG_3] = (temp_64 & X64(000000003fffffff))			\
 	      |((temp_64 & X64(c000000000000000)) >> 32)			\
 	      |(((temp_64 & X64(8000000000000000)) >>31) * X64(ffffffff));
 
-#define DO_FTOIT state.r[REG_3] = state.f[FREG_1];
-#define DO_ITOFT state.f[FREG_3] = state.r[REG_1];
-#define DO_ITOFS state.f[FREG_3] = load_s((u32)state.r[REG_1]);
-#define DO_ITOFF state.f[FREG_3] = itof_f(state.r[REG_1]);
+#define DO_FTOIT                                                   \
+  FPSTART;                                                          \
+   state.r[REG_3] = state.f[FREG_1];
+#define DO_ITOFT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = state.r[REG_1];
+#define DO_ITOFS                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = load_s((u32)state.r[REG_1]);
+#define DO_ITOFF                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = itof_f(state.r[REG_1]);
 
-#define DO_MULG state.f[FREG_3] = host2g(g2host(state.f[FREG_1]) * g2host(state.f[FREG_2]));
-#define DO_MULF state.f[FREG_3] = host2f(f2host(state.f[FREG_1]) * f2host(state.f[FREG_2]));
-#define DO_MULT state.f[FREG_3] = host2t(t2host(state.f[FREG_1]) * t2host(state.f[FREG_2]));
-#define DO_MULS state.f[FREG_3] = host2s(s2host(state.f[FREG_1]) * s2host(state.f[FREG_2]));
+#define DO_MULG                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2g(g2host(state.f[FREG_1]) * g2host(state.f[FREG_2]));
+#define DO_MULF                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2f(f2host(state.f[FREG_1]) * f2host(state.f[FREG_2]));
+#define DO_MULT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2t(t2host(state.f[FREG_1]) * t2host(state.f[FREG_2]));
+#define DO_MULS                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2s(s2host(state.f[FREG_1]) * s2host(state.f[FREG_2]));
 
-#define DO_DIVG state.f[FREG_3] = host2g(g2host(state.f[FREG_1]) / g2host(state.f[FREG_2]));
-#define DO_DIVF state.f[FREG_3] = host2f(f2host(state.f[FREG_1]) / f2host(state.f[FREG_2]));
-#define DO_DIVT state.f[FREG_3] = host2t(t2host(state.f[FREG_1]) / t2host(state.f[FREG_2]));
-#define DO_DIVS state.f[FREG_3] = host2s(s2host(state.f[FREG_1]) / s2host(state.f[FREG_2]));
+#define DO_DIVG                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2g(g2host(state.f[FREG_1]) / g2host(state.f[FREG_2]));
+#define DO_DIVF                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2f(f2host(state.f[FREG_1]) / f2host(state.f[FREG_2]));
+#define DO_DIVT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2t(t2host(state.f[FREG_1]) / t2host(state.f[FREG_2]));
+#define DO_DIVS                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2s(s2host(state.f[FREG_1]) / s2host(state.f[FREG_2]));
 
-#define DO_SQRTG state.f[FREG_3] = host2g(sqrt(g2host(state.f[FREG_2])));
-#define DO_SQRTF state.f[FREG_3] = host2f(sqrt(f2host(state.f[FREG_2])));
-#define DO_SQRTT state.f[FREG_3] = host2t(sqrt(t2host(state.f[FREG_2])));
-#define DO_SQRTS state.f[FREG_3] = host2s(sqrt(s2host(state.f[FREG_2])));
+#define DO_SQRTG                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2g(sqrt(g2host(state.f[FREG_2])));
+#define DO_SQRTF                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2f(sqrt(f2host(state.f[FREG_2])));
+#define DO_SQRTT                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2t(sqrt(t2host(state.f[FREG_2])));
+#define DO_SQRTS                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2s(sqrt(s2host(state.f[FREG_2])));
 
-#define DO_CVTST state.f[FREG_3] = host2t(s2host(state.f[FREG_2]));
-#define DO_CVTTS state.f[FREG_3] = host2s(t2host(state.f[FREG_2]));
+#define DO_CVTST                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2t(s2host(state.f[FREG_2]));
+#define DO_CVTTS                                                   \
+  FPSTART;                                                          \
+   state.f[FREG_3] = host2s(t2host(state.f[FREG_2]));
 
 #endif
